src/test/ui/non-constant-in-const-path.stderr
error[E0080]: runtime values cannot be referenced in patterns
  --> $DIR/non-constant-in-const-path.rs:4:15
   |
LL |         0 ..= x => {}
   |               ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
